
syntax = "proto2";

option java_package = "org.bohdi.protobuf.inspector";
option java_outer_classname = "AddressBookProtos";


message Person {
  optional string name = 1;
  optional int32 id = 2;  // Unique ID number for this person.
  optional string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
}

message AddressBook {
  optional string name = 1;
  repeated Person people = 2;
}
